@startuml
'https://plantuml.com/class-diagram

class ApplicationController {
    {field} -ExhibitManager _exhibitManagerGameObject
    {field} -PlayerSpawnController _playerSpawnControllerGameObject
    {field} -ExhibitDetailsUserInterface _exhibitDetailsUserInterfaceGameObject
    {field} -NavigationUserInterface _navigationUserInterfaceGameObject
    {field} -SelectionManager _selectionManagerGameObject
    {method} -Awake()    
    {method} -Start()
    {method} -LoadFromResourcesAsGameObject(string prefab)
}
class ExhibitManager
class PlayerSpawnController
class ExhibitDetailsUserInterface
class NavigationUserInterface
class SelectionManager

ApplicationController ---> ExhibitDetailsUserInterface
ApplicationController ---> ExhibitManager
ApplicationController --> NavigationUserInterface
ApplicationController --> PlayerSpawnController
ApplicationController ---> SelectionManager

@enduml